<resources>
    <string name="app_name">Health Journal</string>
    <string name="action_settings">Settings</string>
    <string name="tagline">Welcome to the application Health Journal. We care about you, that you can care about someone else.</string>
    <string name="bn_history">History</string>
    <string name="bn_add">Add result</string>
    <string name="bn_ok">OK</string>
    <string name="bn_delete_all">Delete all</string>
    <string name="bn_cancel">Cancel</string>
    <string name="bn_setting">Setting</string>
    <string name="bn_take_data_from_the_server">Take from server</string>
    <string name="bn_synchronization">Synchronization</string>
    <string name="data">Data:</string>
    <string name="enter">Enter results:</string>
    <string name="add">Add</string>
    <string name="pressure">Pressure:</string>
    <string name="and">/</string>
    <string name="pulse">Pulse:</string>
    <string name="sugar">Sugar:</string>
    <string name="comment">Comment:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="deleting">Deleting.</string>
    <string name="deleted">Deleted.</string>
    <string name="questionDelete">Do you want delete all?</string>
    <string name="list">List of results:</string>
    <string name="save">Save</string>
    <string name="language">Language:</string>
    <string name="saved">Saved.</string>
    <string name="notification_add">Add result!</string>

</resources>
