<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/background" />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:text="@string/enter"
        android:textAppearance="@style/MyTextStyle"></TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterAll"
        android:layout_below="@id/label"
        >



    <RelativeLayout
        android:id="@+id/pressureAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textAppearance="@style/MyTextStyle" />

        <EditText
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/pressure"
            android:layout_toRightOf="@id/pressure"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:textAppearance="@style/EnterStyle"></EditText>

        <TextView
            android:id="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/high"
            android:layout_toRightOf="@id/high"
            android:layout_weight="1"
            android:text="@string/and"
            android:textAppearance="@style/MyTextStyle" />

        <EditText
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/and"
            android:layout_toRightOf="@id/and"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:textAppearance="@style/EnterStyle"></EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pulseAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressureAll">

        <TextView
            android:id="@+id/pulseString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse"
            android:textAppearance="@style/MyTextStyle" />

        <EditText
            android:id="@+id/pulse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/pulseString"
            android:layout_toRightOf="@id/pulseString"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:textAppearance="@style/EnterStyle"></EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sugarAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pulseAll">

        <TextView
            android:id="@+id/sugarString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:textAppearance="@style/MyTextStyle" />

        <EditText
            android:id="@+id/sugarEnter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/sugarString"
            android:layout_toRightOf="@id/sugarString"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:textAppearance="@style/EnterStyle"></EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/commentAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sugarAll">

        <TextView
            android:id="@+id/commentString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textAppearance="@style/MyTextStyle" />

        <EditText
            android:id="@+id/commentEnter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/commentString"
            android:layout_toRightOf="@id/commentString"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:textAppearance="@style/EnterStyle"></EditText>

    </RelativeLayout>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterAll">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ok"
            android:layout_toLeftOf="@+id/ok"
            android:background="@drawable/hbutton"
            android:text="@string/bn_cancel"
            android:textAppearance="@style/MyTextStyle"></Button>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/hbutton"
            android:text="@string/bn_ok"
            android:textAppearance="@style/MyTextStyle">


        </Button>

    </RelativeLayout>

</RelativeLayout>